# sill

./: .gitignore  Makefile  README.md
dice_egg/: Cargo.toml
dice_egg/src/: dice.rs  egg.rs  game.rs  main.rs  object.rs  text.rs
include/: init.h  load_resources.h  main_loop.h  say.h
include/object/: collision.h  dice.h  egg.h  object.h  text.h
src/: Makefile  init.c  load_resources.c  main_loop.c  say.c  sill.c
src/object/: collision.c  dice.c  egg.c  object.c  text.c
