[package]
name = "dice_egg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
incremental = false
codegen-units = 1
rpath = false

[profile.test]
opt-level = 3
debug = false
strip = true
lto = true
incremental = false
codegen-units = 1
rpath = false

[profile.bench]
opt-level = 3
debug = false
strip = true
lto = true
incremental = false
codegen-units = 1
rpath = false

[dependencies]

[dependencies.raylib]
version = "4.5.0"
git = "https://github.com/litten2up/raylib-rs"
branch = "4.5.0"
